--- a/client/src/css/modules.css
+++ b/client/src/css/modules.css
@@ -102,6 +102,10 @@ input[type=number] {
     justify-content: space-between;
 }
 
+.log {
+    max-width: 400px;
+}
+
 .stepper {
     display: flex;
     gap: 1rem;
